fix: toast text close button overflow

--- a/src/components/Notifications/_notifications.scss
+++ b/src/components/Notifications/_notifications.scss
@@ -36,6 +36,10 @@
     width: 100%;
   }
 
+  .#{$prefix}--toast-notification__details {
+    margin-right: 3rem;
+  }
+
   .#{$prefix}--toast-notification__icon {
     margin-top: 1.375rem;
   }
